--- a/main.css
+++ b/main.css
@@ -5,56 +5,20 @@ height: 100%;
 font-family: 'Barlow Condensed';
 font-size: 22px;   
 color: #000;      
-background: white;
+background-image: url("bg.jpg");
+background-size:100% 100%;
 height: 100%;
-position: auto;
+position: fixed;
 width: 100%;
 
 }
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+
+p {
+    margin-top: -15px;
+    margin-left: 33px;
+    color: orange;
 }
 
-/* Style the buttons inside the tab */
-.tab button {
-    background-color: orange;
-    float: right;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 50px;
-    transition: 0.3s;
-    font-size: 25px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-}
-
-/* Style the close button */
-.topright {
-    float: right;
-    cursor: pointer;
-    font-size: 100px;
-}
-
-.topright:hover {color: red;}
 
 * {
     box-sizing: border-box;
@@ -62,7 +26,7 @@ width: 100%;
 
 form.example input[type=text] {
     padding: 10px;
-    font-size: 17px;
+    font-size: 18px;
     border: 1px solid grey;
     float: left;
     width: 80%;
@@ -73,11 +37,14 @@ form.example button {
     float: left;
     width: 20%;
     padding: 10px;
-    background: #2196F3;
+    background: orange;
     color: white;
     font-size: 17px;
     border: 1px solid grey;
     border-left: none;
+    font-family: 'Barlow Condensed';
+    font-size: 18px; 
+    font-weight: bold; 
     cursor: pointer;
 }
 
@@ -90,148 +57,33 @@ form.example::after {
     clear: both;
     display: table;
 }
-
-/* Style for BookView.php*/
-
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-}
-
-#myInput {
-    border-box: box-sizing;
-    background-image: url('searchicon.png');
-    background-position: 14px 12px;
-    background-repeat: no-repeat;
-    font-size: 16px;
-    padding: 14px 20px 12px 45px;
-    border: none;
-    border-bottom: 1px solid #ddd;
-}
-
-#myInput:focus {outline: 3px solid #ddd;}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f6f6f6;
-    min-width: 230px;
-    overflow: auto;
-    border: 1px solid #ddd;
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown a:hover {background-color: #ddd}
-
-.show {display:block;}
-
-
 *{
   font-family: 'Barlow Condensed';
 }
 
-.wrapper{
-  background-color: lightgrey;
-  padding: 50px;
-}
 
-#wishlist{
- position: absolute;
- top: 50px;
- right: 150px;
-}
-
-.footer{ 
-       position: fixed;  
-       font-size: 12px;   
-       text-align: center;    
-       bottom: 0px; 
-       width: 100%;
-}  
-
-/* style for checkbox if book is owned or read or both */
-/* The container */
-.container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
+/* Set a style for all buttons */
+button[type=button]{
+    float: right;
+    background-color: orange;
+    color: white;
+    padding: 14px 20px;
+    margin: 0 8px;
+    margin-top: 20px;
+    margin-right: 20px;
+    border: none;
     cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    width: 15%;
+    font-family: 'Barlow Condensed';
+    font-size: 18px; 
+    font-weight: bold; 
+    opacity: 0.9;
 }
 
-/* Hide the browser's default checkbox */
-.container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
+button:hover {
+    opacity:1;
+    background: #0b7dda;
 }
 
-/* Create a custom checkbox */
-.checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-}
 
-/* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-    background-color: #ccc;
-}
 
-/* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-    background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-}
-
-/* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
-    display: block;
-}
-
-/* Style the checkmark/indicator */
-.container .checkmark:after {
-    left: 9px;
-    top: 5px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 3px 3px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
