--- a/readBusterActive.css
+++ b/readBusterActive.css
@@ -5,56 +5,18 @@ height: 100%;
 font-family: 'Barlow Condensed';
 font-size: 22px;   
 color: #000;      
-background: white;
+background: #FFF8DC;
 height: 100%;
 position: auto;
 width: 100%;
 
 }
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+p {
+    margin-top: -15px;
+    margin-left: 33px;
+    color: orange;
 }
 
-/* Style the buttons inside the tab */
-.tab button {
-    background-color: orange;
-    float: right;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 50px;
-    transition: 0.3s;
-    font-size: 25px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-}
-
-/* Style the close button */
-.topright {
-    float: right;
-    cursor: pointer;
-    font-size: 100px;
-}
-
-.topright:hover {color: red;}
 
 * {
     box-sizing: border-box;
@@ -62,7 +24,7 @@ width: 100%;
 
 form.example input[type=text] {
     padding: 10px;
-    font-size: 17px;
+    font-size: 18px;
     border: 1px solid grey;
     float: left;
     width: 80%;
@@ -73,11 +35,14 @@ form.example button {
     float: left;
     width: 20%;
     padding: 10px;
-    background: #2196F3;
+    background: orange;
     color: white;
     font-size: 17px;
     border: 1px solid grey;
     border-left: none;
+    font-family: 'Barlow Condensed';
+    font-size: 18px; 
+    font-weight: bold; 
     cursor: pointer;
 }
 
@@ -90,11 +55,41 @@ form.example::after {
     clear: both;
     display: table;
 }
+*{
+  font-family: 'Barlow Condensed';
+}
+
+
+/* Set a style for all buttons */
+button[type=button]{
+    float: right;
+    background-color: orange;
+    color: white;
+    padding: 14px 20px;
+    margin: 0 8px;
+    margin-top: 20px;
+    margin-right: 20px;
+    border: none;
+    cursor: pointer;
+    width: 15%;
+    font-family: 'Barlow Condensed';
+    font-size: 18px; 
+    font-weight: bold; 
+    opacity: 0.9;
+}
+
+button:hover {
+    opacity:1;
+    background: #0b7dda;
+}
+
+
 
 /* Style for Profile view*/
 
 .dropbtn {
-    background-color: #3498DB;
+    align=right;
+    background-color: orange;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -103,7 +98,7 @@ form.example::after {
 }
 
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
+    background-color: #0b7dda;
 }
 
 .dropdown {
@@ -128,7 +123,7 @@ form.example::after {
     display: block;
 }
 
-.dropdown a:hover {background-color: #ddd}
+.dropdown a:hover {background-color: #0b7dda}
 
 .show {display:block;}
 
